--- a/recetas/index.html
+++ b/recetas/index.html
@@ -14,6 +14,7 @@
             <li><a href="../recetas/Colombia/arroz_coco.html">Arroz con coco y camarón fresco (Región Caribe)</a></li>
             <li><a href="../recetas/Colombia/bandeja_paisa.html">Bandeja paisa (Región Andina)</a></li>
             <li><a href="../recetas/Colombia/ajiaco.html">Ajiaco (Región Andina)</a></li>
+            <li><a href="../recetas/Mexico/pozole.html">Ajiaco (Región Andina)</a></li>
         </ul>
     </nav>
     <br>
